--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Tic Tac Toe</title>
-    <link rel="icon" href = "img/icon.png">
+    <link rel="icon" href = "img/logo.png">
     <link rel="stylesheet" href="styles.css">
     <!-- <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">-->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
@@ -17,20 +17,24 @@
 
     <div class="main">
         <div class="playGrid">
-            <div class="box" id="1">O</div>
-            <div class="box" id="2">X</div>
+            <div class="box" id="1"></div>
+            <div class="box" id="2"></div>
             <div class="box" id="3"></div>
             <div class="box" id="4"></div>
-            <div class="box" id="5">O</div>
+            <div class="box" id="5"></div>
             <div class="box" id="6"></div>
             <div class="box" id="7"></div>
             <div class="box" id="8"></div>
-            <div class="box" id="9">O</div>
+            <div class="box" id="9"></div>
         </div>
     </div>
 
     <div class="restart">
         <button id="restart">Restart</button>
     </div>
+
+    <div class="winnerModal">
+    </div>
+    <div class="overlay"></div>
 </body>
 </html>
